modules/ec2/ec2.tf
resource "aws_instance" "tomcat" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.key_name
  subnet_id              = var.subnet_id
  vpc_security_group_ids = [aws_security_group.tomcat_sg.id]
  associate_public_ip_address = true

  user_data = file("${path.module}/install_tomcat.sh")  # Run script on startup

  tags = {
    Name = "Tomcat-Server"
  }
}

# Security Group inside EC2 module
resource "aws_security_group" "tomcat_sg" {
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "Tomcat-SG" }
}
